...
        NavigationBarItem(
            selected = false,
            onClick = { navController.navigate("albums") },
            label = { Text("Albumes") },
            icon = { Icon(imageVector = Icons.Filled.PlayArrow, contentDescription = null, tint = Color.Black)
            },
            modifier = Modifier.testTag("bottom_nav_albums")
        )


        NavigationBarItem(
            selected = false,
            onClick = { navController.navigate("prizes") },
...
