...
                .align(Alignment.BottomEnd)
                .padding(16.dp)
                .offset(y = 8.dp)
                .testTag("album_list_item_$id")
        ) {
            Text(
                text = "Ver más",
                fontSize = 12.sp,
                fontWeight = FontWeight.Bold
            )
        }
    }
}
